# regression_analysis

./: .gitignore  CMakeLists.txt  README.md
data/: gsl_matrix.data
docs/: CMakeLists.txt  config
include/: .exception.c.swp  exception.c  exception.h  regression.h  string.c  string.h
include/matrix/: matrix.h
lib/: .print_util.c.swp  csv_parser.c  exception.c  print_util.c  regression.c  serializer.c  statistics.c  string.c  utility.c
lib/include/: .serializer.h.swp  csv_parser.h  exception.h  print_util.h  regression.h  serializer.h  statistics.h  string.h  utility.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt
testData/: data1
